[lighting] Added simple lighting example infrastructure.
This will permit to play around with what Rothko needs in order to
provide lighting. For now its all game-space functionality.

Enabled fragment shader UBOs (were disabled) and were some bugs lying
around it.

--- a/examples/BUILD.gn
+++ b/examples/BUILD.gn
@@ -9,8 +9,9 @@ group("examples") {
       "cube",
       "emulator",
       "gltf",
-      "scene_graph",
       "ozz",
+      "scene_graph",
+      "simple_lighting",
     ]
   }
 }
