--- a/examples/simple_lighting/BUILD.gn
+++ b/examples/simple_lighting/BUILD.gn
@@ -1,19 +1,17 @@
 # Copyright 2019, Cristián Donoso.
 # This code has a BSD license. See LICENSE.
 
-executable("gltf") {
-  output_name = "gltf"
-
+executable("simple_lighting") {
   sources = [
-    "loader.cc",
-    "loader.h",
     "main.cc",
+    "shaders.cc",
+    "shaders.h",
   ]
 
   deps = [
     "//rothko:game",
     "//rothko/graphics/default_shaders",
+    "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
-    "//third_party/tiny_gltf",
   ]
 }
