--- a/examples/textured_lighting/BUILD.gn
+++ b/examples/textured_lighting/BUILD.gn
@@ -13,5 +13,6 @@ executable("textured_lighting") {
     "//rothko/graphics/default_shaders",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
+    "//third_party:imguizmo",
   ]
 }
