Extract transform from matrix

--- a/examples/scene_graph/BUILD.gn
+++ b/examples/scene_graph/BUILD.gn
@@ -11,5 +11,6 @@ executable("scene_graph") {
     "//rothko/graphics/default_shaders",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
+    "//third_party:imguizmo",
   ]
 }
