[rothko][scene_graph] Transform <-> Matrix decomposition.
This permits to obtain a Transform from a transformation matrix.
With this, it's easier to use ImGuizmo for getting widgets.

Created a modification widget for transforms. It only works for root
nodes now.

--- a/examples/scene_graph/BUILD.gn
+++ b/examples/scene_graph/BUILD.gn
@@ -10,6 +10,7 @@ executable("scene_graph") {
     "//rothko:game",
     "//rothko/graphics/default_shaders",
     "//rothko/ui:imgui",
+    "//rothko/widgets",
     "//rothko/window:sdl_opengl",
     "//third_party:imguizmo",
   ]
