[rothko] Ring widget.
Permits to draw an arbitrary debug ring in any orientation.
Moved the LineManager to the widgets library.

--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -14,6 +14,7 @@ executable("cube") {
     "//rothko/math",
     "//rothko/platform",
     "//rothko/scene",
+    "//rothko/widgets",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
     "//third_party:imguizmo",
