[rothko] Moved grid to widgets.
It's more of a debug/widget thing really.
Also adding name searching for shaders within the renderer. This permits
some widgets to start creating default shaders instead on relying to the
caller to always create them. They can if the want to though.

--- a/examples/ozz/BUILD.gn
+++ b/examples/ozz/BUILD.gn
@@ -10,6 +10,7 @@ executable("ozz") {
     "//rothko:game",
     "//rothko/graphics",
     "//rothko/ui:imgui",
+    "//rothko/widgets",
     "//rothko/window:sdl_opengl",
     "//third_party:imgui_extras",
     "//third_party/ozz:animation",
