--- a/examples/gltf/BUILD.gn
+++ b/examples/gltf/BUILD.gn
@@ -13,6 +13,7 @@ executable("gltf") {
   deps = [
     "//rothko:game",
     "//rothko/graphics/default_shaders",
+    "//rothko/widgets",
     "//rothko/window:sdl_opengl",
     "//third_party/tiny_gltf",
   ]
