[rothko][tetris] Basic tetris infrastructure.
This is the beginning of a Tetris example, which is geared to be a real
simple full game. Now holds basic shape movement.

- Made some changes to the window API.
- Added Masks management in the math API. Added tests.
- Moved the bit/mask macros from utils to math.
- Simplified the window Update calls, to only pass out one event,
  instead of multiple (not needed).

--- a/examples/BUILD.gn
+++ b/examples/BUILD.gn
@@ -13,6 +13,7 @@ group("examples") {
       "ozz",
       "scene_graph",
       "simple_lighting",
+      "tetris",
       "textured_lighting",
     ]
   }
