[rothko] Directory iteration.
Now rothko can iterate over a directory get all the files.
It can also filter by extension.

Loaded all models for tetris at once.

--- a/examples/gltf/BUILD.gn
+++ b/examples/gltf/BUILD.gn
@@ -13,6 +13,7 @@ executable("gltf") {
   deps = [
     "//rothko:game",
     "//rothko/graphics/default_shaders",
+    "//rothko/ui:imgui",
     "//rothko/widgets",
     "//rothko/window:sdl_opengl",
     "//third_party/tiny_gltf",
