[rothko] StackAllocator and Models
- Created a Stack Allocator.
- Correctly track materials within glTF models.
- Created a ModelInstance, which permits to render an specific model
  with a transform.
- glTF example now loads and renders multiple models.

--- a/rothko/memory/BUILD.gn
+++ b/rothko/memory/BUILD.gn
@@ -9,6 +9,8 @@ source_set("memory") {
 
   sources = [
     "memory_block.cc",
+    "stack_allocator.cc",
+    "stack_allocator.h",
   ]
 
   deps = [
