[rothko] Textures into Scene serialization.

--- a/examples/gltf/BUILD.gn
+++ b/examples/gltf/BUILD.gn
@@ -8,6 +8,9 @@ executable("gltf") {
     "scene.h",
     "shaders.cc",
     "shaders.h",
+
+    "serialize_scene.cc",
+    "deserialize_scene.cc",
   ]
 
   deps = [
